cloudfront-sg.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  ParentVPCStack:
    Description: 'Stack name of parent VPC stack based on vpc/vpc-*azs.yaml template.'
    Type: String
Resources:
  SecurityGroup1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub '${AWS::StackName}1'
      VpcId: {'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'}
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.124.199.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 144.220.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 34.226.14.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.124.128.0/17
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.230.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.239.128.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.82.128.0/19
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 99.84.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.15.127.128/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 35.158.136.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.57.254.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 18.216.170.128/25
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.52.204.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.54.63.128/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.59.250.0/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 204.246.172.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.210.67.128/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 35.167.191.128/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.47.139.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.199.127.192/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.212.248.0/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 205.251.192.0/19
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.66.194.128/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.239.192.0/19
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 70.132.0.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.32.0.0/15
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.224.0.0/14
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.113.203.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 99.79.168.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 34.195.252.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 35.162.63.192/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 34.223.12.224/27
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.35.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 204.246.164.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.56.127.0/25
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 34.223.80.192/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 204.246.168.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.228.69.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 34.216.51.0/25
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 71.152.0.0/17
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 216.137.32.0/19
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 205.251.249.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 3.231.2.0/25
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 99.86.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.46.0.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.84.0.0/15
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.233.255.128/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 204.246.173.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 18.200.212.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 64.252.64.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.52.191.128/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 204.246.174.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 64.252.128.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 205.251.254.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 143.204.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 205.251.252.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.78.247.128/26
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 204.246.176.0/20
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.220.191.0/26

  SecurityGroup2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub '${AWS::StackName}2'
      VpcId: {'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'}
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.249.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.240.128.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 205.251.250.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.222.128.0/17
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.192.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 34.232.163.208/29

Outputs:
  SecurityGroup1:
    Description: 'Use this Security Group to reference CloudFront traffic 1.'
    Value: !Ref SecurityGroup1
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroup1'

  SecurityGroup2:
    Description: 'Use this Security Group to reference CloudFront traffic 2.'
    Value: !Ref SecurityGroup2
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroup2'
